@@ -7,6 +7,7 @@ ver 0.17 (2011/??/??)
   - curl: enable CURLOPT_NETRC
 * decoder:
   - mpg123: implement seeking
+  - ffmpeg: drop support for pre-0.5 ffmpeg
 * output:
   - osx: allow user to specify other audio devices
   - raop: new output plugin
